base/fileserver/fileserver-deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  labels:
    app: fileserver
  name: fileserver
  namespace: k8s-example
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fileserver
  template:
    metadata:
      labels:
        app: fileserver
    spec:
      containers:
      - image: brendanburns/journal-server:latest
        imagePullPolicy: Always
        name: fileserver
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        resources:
          requests:
            cpu: "250m"
            memory: "64Mi"
          limits:
            cpu: "500m"
            memory: "128Mi"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
