base/fileserver/fileserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fileserver 
  name: fileserver
  namespace: k8s-example
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: fileserver
  sessionAffinity: None
  type: ClusterIP
